好きなスポーツを追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Document</title>
 </head>
 <body>
-    好きな食べ物はチャーハンです。<br>
+    好きな食べ物はパエリアです。<br>
+    好きなアーティストはGLAYです。<br>
+    好きなスポーツはバドミントンです<br>
 </body>
 </html>
